more modifications travis.yml for builds to work

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: android
+
+before_install:
+    - chmod +x gradlew
+
 android:
   components:
     # Uncomment the lines below if you want to
@@ -22,6 +26,3 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-19
     - sys-img-x86-android-17
-
-  before_script:
-    - chmod +x gradlew
