--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: android
 
+script: "./gradlew build"
+
 before_install:
     - chmod +x gradlew
 
@@ -19,8 +21,8 @@ android:
 
     # Additional components
     - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
+    # - extra-google-m2repository
+    # - extra-android-m2repository
     - addon-google_apis-google-19
 
     # Specify at least one system image,
