--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "edu.singaporetech.ict2105.teamproject"
+        applicationId "com.example.insite.app"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
