--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile files('src/main/java/com/example/insite/app/lib/volley.jar')
+    compile files('src/main/java/com/example/insite/app/lib/volley.jar', 'src/main/java/com/example/insite/app/lib/httpcore-4.3.2.jar', 'src/main/java/com/example/insite/app/lib/httpmime-4.3.5.jar')
 }
