Prevent mulitiple click on button, integrated Setting SharedPref Menu, added missing resource file "ic_action_new.png"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.insite.app.MainActivity" />
         </activity>
+
+        <activity
+            android:name=".SetPreferenceActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
