--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('src/main/java/com/example/insite/app/lib/volley.jar')
     compile files('src/main/java/com/example/insite/app/lib/httpmime-4.3.5.jar')
     compile files('src/main/java/com/example/insite/app/lib/httpcore-4.3.2.jar')
+    compile files('src/main/java/com/example/insite/app/lib/robotium-solo-5.3.1.jar')
+    compile files('src/androidTest/java/com/example/insite/app/lib/robotium-solo-5.3.1.jar')
+    compile files('src/androidTest/java/com/example/insite/app/Robotium/robotium-solo-5.3.1.jar')
 }
